--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.typekit.net/wxf7xli.css">
+    <link rel="stylesheet" href="/index.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <script type="module" src="index.js"></script>
+    <div class="backdropbackground"></div>
+    <div class="container">
+        <div class="panel rightAlign smallMenu" id="panel">
+            <header>MAIN MENU</header>
+            <div class="panelContent" id="pContent">
+                <button class="selected" id="b1">CONTINUE GAME</button>
+                <button id="b2">NEW GAME</button>
+                <button id="b3">LOAD GAME</button>
+                <button id="b4">OPTIONS</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
