collect my demos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/wxf7xli.css">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="./index.css">
     <title>Document</title>
 </head>
 <body>
@@ -12,16 +12,21 @@
     <script type="module" src="bgcycle.js"></script>
     <div class="backdropbackground" id="bg"></div>
     <div class="container" id="container">
-        <img class="freeman" src="/imgs/xbox freeman transparent.png">
+        <img class="freeman" src="./imgs/xbox freeman transparent.png">
         <div class="panel rightAlign smallMenu" id="panel">
-            <header>MAIN MENU</header>
+            <header id="header">MAIN MENU</header>
             <div class="panelContent" id="pContent">
-                <div id="c1">
-                    <button class="selected" id="b1">CONTINUE GAME<img class="selector" src=""></button>
-                    <button id="b2">NEW GAME</button>
-                    <button id="b3">LOAD GAME</button>
-                    <button id="b4">OPTIONS</button>
+                <div id="c1" class="content">
+                    <button class="selected" id="b1">DOWNLOADS<img class="selector" src=""></button>
+                    <button id="b2">BLOG???</button>
+                    <button id="b3">GUIDE/WIKI??</button>
+                    <button id="b4">ABOUT</button>
                 </div>
+                <div id="c2" class="content invisible">
+                    <div class="portDownloads">
+                        <div class="downloadLink"> </div>
+                    </div>
+                <div 
             </div>
         </div>
     </div>
