--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <header id="header">MAIN MENU</header>
             <div class="panelContent" id="pContent">
                 <div id="c1" class="content">
-                    <button class="menubutton selected" id="b1">DOWNLOADS<img class="selector" src=""></button>
-                    <button class="menubutton" id="b2">BLOG???</button>
-                    <button class="menubutton" id="b3">GUIDE/WIKI??</button>
-                    <button class="menubutton" id="b4">ABOUT</button>
+                    <button class="menubutton selected" id="b1">DOWNLOADS<img class="selector" src="./imgs/arrowRight.png"></button>
+                    <button class="menubutton" id="b2">BLOG???<img class="selector" src="./imgs/arrowRight.png"></button>
+                    <button class="menubutton" id="b3">GUIDE/WIKI??<img class="selector" src="./imgs/arrowRight.png"></button>
+                    <button class="menubutton" id="b4">ABOUT<img class="selector" src="./imgs/arrowRight.png"></button>
                 </div>
                 <div id="c2" class="content invisible">
                     <p class="filetodownload">FILE TO DOWNLOAD</p>
