--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/wxf7xli.css">
     <link rel="stylesheet" href="./index.css">
-    <title>Document</title>
+    <title>Half Life 2 Xbox</title>
+    <link rel="icon" type="image/x-icon" href="./imgs/icon.ico">
 </head>
 <body>
     <script type="module" src="index.js"></script>
@@ -24,25 +25,60 @@
                 </div>
                 <div id="c2" class="content invisible">
                     <p class="filetodownload">FILE TO DOWNLOAD</p>
-                    <button class="left Arrow">
+                    <button class="left Arrow disabledArrow" id="lArrow">
                         <img src="./imgs/arrowLeft.png">
                     </button>
-                    <button class="right Arrow">
+                    <button class="right Arrow" id="rArrow">
                         <img src="./imgs/arrowRight.png">
                     </button>
+                    <p class="page" id="pageNumber">1/5</p>
                     <div class="portDownloads">
-                        <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
-                            <p>NAME</p>
-                            <img src="./downloadPreviews/gmconstruct.png">
-                        </button>
-                        <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
-                            <p>NAME</p>
-                            <img src="./downloadPreviews/gmconstruct.png">
-                        </button>
-                        <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
-                            <p>NAME</p>
-                            <img src="./downloadPreviews/gmconstruct.png">
-                        </button>
+                        <div class="scroller" id="scroller">
+                            <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
+                                <p>NAME</p>
+                                <img src="./downloadPreviews/gmconstruct.png">
+                            </button>
+                            <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
+                                <p>NAME</p>
+                                <img src="./downloadPreviews/gmconstruct.png">
+                            </button>
+                            <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
+                                <p>NAME</p>
+                                <img src="./downloadPreviews/gmconstruct.png">
+                            </button>
+                            <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
+                                <p>NAME</p>
+                                <img src="./downloadPreviews/gmconstruct.png">
+                            </button>
+                            <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
+                                <p>NAME</p>
+                                <img src="./downloadPreviews/gmconstruct.png">
+                            </button>
+                            <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
+                                <p>NAME</p>
+                                <img src="./downloadPreviews/gmconstruct.png">
+                            </button>
+                            <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
+                                <p>NAME</p>
+                                <img src="./downloadPreviews/gmconstruct.png">
+                            </button>
+                            <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
+                                <p>NAME</p>
+                                <img src="./downloadPreviews/gmconstruct.png">
+                            </button>
+                            <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
+                                <p>NAME</p>
+                                <img src="./downloadPreviews/gmconstruct.png">
+                            </button>
+                            <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
+                                <p>NAME</p>
+                                <img src="./downloadPreviews/gmconstruct.png">
+                            </button>
+                            <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
+                                <p>NAME</p>
+                                <img src="./downloadPreviews/gmconstruct.png">
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
