--- a/index.html
+++ b/index.html
@@ -24,56 +24,26 @@
                     <button class="menubutton" id="b4">ABOUT<img class="selector" src="./imgs/arrowRight.png"></button>
                 </div>
                 <div id="c2" class="content invisible">
-                    <p class="filetodownload">FILE TO DOWNLOAD</p>
+                    <p class="filetodownload" id="downloadTitle">MAPS</p>
                     <button class="left Arrow disabledArrow" id="lArrow">
                         <img src="./imgs/arrowLeft.png">
                     </button>
                     <button class="right Arrow" id="rArrow">
                         <img src="./imgs/arrowRight.png">
                     </button>
+                    <div class="tabSelector">
+                        <button id="t1">MAPS</button>
+                        <button id="t2">PORTS</button>
+                    </div>
                     <p class="page" id="pageNumber">1/5</p>
                     <div class="portDownloads">
-                        <div class="scroller" id="scroller">
+                        <div class="switcher" id="scroller1">
                             <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
                                 <p>NAME</p>
                                 <img src="./downloadPreviews/gmconstruct.png">
                             </button>
-                            <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
-                                <p>NAME</p>
-                                <img src="./downloadPreviews/gmconstruct.png">
-                            </button>
-                            <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
-                                <p>NAME</p>
-                                <img src="./downloadPreviews/gmconstruct.png">
-                            </button>
-                            <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
-                                <p>NAME</p>
-                                <img src="./downloadPreviews/gmconstruct.png">
-                            </button>
-                            <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
-                                <p>NAME</p>
-                                <img src="./downloadPreviews/gmconstruct.png">
-                            </button>
-                            <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
-                                <p>NAME</p>
-                                <img src="./downloadPreviews/gmconstruct.png">
-                            </button>
-                            <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
-                                <p>NAME</p>
-                                <img src="./downloadPreviews/gmconstruct.png">
-                            </button>
-                            <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
-                                <p>NAME</p>
-                                <img src="./downloadPreviews/gmconstruct.png">
-                            </button>
-                            <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
-                                <p>NAME</p>
-                                <img src="./downloadPreviews/gmconstruct.png">
-                            </button>
-                            <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
-                                <p>NAME</p>
-                                <img src="./downloadPreviews/gmconstruct.png">
-                            </button>
+                        </div>
+                        <div class="switcher invisible" id="scroller2">
                             <button class="downloadLink" href="https://gmappers.net" id="downloadButton">
                                 <p>NAME</p>
                                 <img src="./downloadPreviews/gmconstruct.png">
@@ -81,10 +51,29 @@
                         </div>
                     </div>
                 </div>
+                <div id="c3" class="content invisible">
+                    <div class="scroller">
+                        <img src="./imgs/cat.jpg">
+                    </div>
+                </div>
+                <div id="c4" class="content invisible">
+                    <div class="scroller">
+                        <p>im writing more stuff you get the point its weird actually im doing this in reverse order i started with c5 and now im on c4 i wonder what happens when i get to c3 curious how keen</p>
+                    </div>
+                </div>
+                <div id="c5" class="content invisible">
+                    <div class="scroller">
+                        <p>hi im emily im writing stuff yada yada its 3 am im sooo tired and its gonna rain tonight thats pretty cool i really really like my girlfriend nicole i love her</p>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="navButtons">
             <button class="navButton" id="back">BACK</button>
+            <div class="toggleLayout" id="toggleLayout">
+                <button>:)</button>
+                <p>STANDARD LAYOUT</p>
+            </div>
         </div>
     </div>
 </body>
